Get reported Financials
